--- a/news/templates/news/create_news_post.html
+++ b/news/templates/news/create_news_post.html
@@ -12,5 +12,6 @@
         {{ form.as_p }}
         <button type="submit">Submit</button>
     </form> 
+    <a href="{% url 'news_list' %}">Back to News List</a>
 </body>
 </html>
